infra-as-code/terraform/sample-aws/egov-user.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: egov-user
  labels:
    app: egov-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: egov-user
  template:
    metadata:
      labels:
        app: egov-user
    spec:
      containers:
      - name: egov-user
        image: hashicorp/http-echo
        args:
        - "-text=Hello from egov-user"
        - "-listen=:8080" 
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: egov-user
spec:
  selector:
    app: egov-user
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
