infra-as-code/terraform/sample-aws/egov-user-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: egov-user-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: digit.dicert.ng
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: egov-user
            port:
              number: 8080
